--- a/todoist.css
+++ b/todoist.css
@@ -1,3 +1,7 @@
+/*
+Use it with user css chrome plugin:
+@import "https://crismannoble.github.io/css-tweaks/todoist.css";
+*/
 .control.labels,
 #projects_archived_holder,
 a[href="/premium"],
